--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^2.8.3",
     "postcss-preset-env": "^7.8.3",
+    "prettier": "2.8.8",
     "rimraf": "^5.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0"
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "sharp": "^0.32.1"
   }
 }
