--- a/sharp.config.json
+++ b/sharp.config.json
@@ -4,7 +4,7 @@
         "chromaSubsampling": "4:4:4"
     },
     "webp": {
-        "nearLossless": true
+        "nearLossless": false
     },
     "png": {
         "palette": true
